tests/ppx/write_prop.expected
Characters 45-48:
  fun (obj : int) -> obj##.p := 2
                     ^^^
Error: This expression has type int but an expression was expected of type
         < .. > Js.t
Characters 25-28:
  fun (obj : < > Js.t) -> obj##.p := 2
                          ^^^
Error: This expression has type <  >
       It has no method p
Characters 52-59:
  fun (obj : < p : float Js.readonly_prop > Js.t) -> obj##.p := 1
                                                     ^^^^^^^
Error: This expression has type
         float Js.readonly_prop = < get : float > Js.gen_prop
       but an expression was expected of type
         < set : int -> unit; .. > Js.gen_prop
       The first object type has no method set
Characters 43-50:
  fun (obj : < p : float Js.prop > Js.t) -> obj##.p := 1
                                            ^^^^^^^
Error: This expression has type
         float Js.prop = < get : float; set : float -> unit > Js.gen_prop
       but an expression was expected of type
         < set : int -> unit; .. > Js.gen_prop
       Types for method set are incompatible
Characters 41-55:
  fun (obj : < p : int Js.prop > Js.t) -> (obj##.p := 1) + 1
                                          ^^^^^^^^^^^^^^
Error: This expression has type unit but an expression was expected of type
         int

